--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
   flutter_advanced_drawer: ^1.3.2
   syncfusion_flutter_datagrid: ^20.2.46
+  google_fonts: ^3.0.1
+  charts_flutter: ^0.12.0
+  get: ^4.6.5
+  data_table_2: ^2.3.6
+  provider: ^6.0.3
+  shared_preferences: ^2.0.15
   cloud_firestore: ^3.4.6
   firebase_core: ^1.21.1
-  data_table_2: ^2.3.6
+  firebase_auth: ^3.7.0
+  google_sign_in: ^5.4.1
+
 
 
 dev_dependencies:
