complaints and feedback module

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,13 @@ dependencies:
   firebase_core: ^1.21.1
   firebase_auth: ^3.7.0
   google_sign_in: ^5.4.1
+  rating_dialog: ^2.0.4
+  flutter_rating_bar: ^4.0.1
+  file_picker: ^5.0.1
+  velocity_x: ^3.5.1
+  syncfusion_flutter_charts: ^20.2.48
+  drop_down_list: ^0.0.4
+  firebase_storage: ^10.3.8
 
 
 
@@ -73,8 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -88,10 +95,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Berlin
+      fonts:
+        - asset: assets/fonts/Berlin.ttf
+
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
