--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: ^2.0.15
   cloud_firestore: ^3.4.6
   firebase_core: ^1.21.1
-  firebase_auth: ^3.7.0
+  firebase_auth: ^3.8.0
   google_sign_in: ^5.4.1
   rating_dialog: ^2.0.4
   flutter_rating_bar: ^4.0.1
@@ -53,6 +53,8 @@ dependencies:
   syncfusion_flutter_charts: ^20.2.48
   drop_down_list: ^0.0.4
   firebase_storage: ^10.3.8
+  expandable_page_view: ^1.0.17
+  awesome_snackbar_content: ^0.0.8
 
 
 
